--- a/garudamod/garudamod.css
+++ b/garudamod/garudamod.css
@@ -9,7 +9,7 @@
 
 .ds4 .stick {
     position: absolute;
-    background: url(ps4-assets/sticks.svg);
+    background: url(garudastick.png);
     height: 94px;
     width: 94px;
 }
